--- a/MvcCookieAuthSample/Views/Account/Login.cshtml
+++ b/MvcCookieAuthSample/Views/Account/Login.cshtml
@@ -7,17 +7,23 @@
 
 <div class="row">
     <div class="col-mid-4">
-        <form method="post">
-        <h4>use a local account to log in</h4>
-        <div class="form-group">
-            <label asp-for="Email"></label>
-            <input asp-for="Email" class="form-control"/>
-        </div>
-         <div class="form-group">
-            <label asp-for="Password"></label>
-            <input asp-for="Password" type="password" class="form-control"/>
-        </div> 
-        <button type="submit" class="btn btn-default">log in</button>
-       </form> 
+        <form method="post" asp-route-returnUrl="@ViewData["ReturnUrl"]">
+            <h4>use a local account to log in</h4>
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control"/>
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>  
+            <button type="submit" class="btn btn-default">log in</button>
+        </form> 
     </div>    
 </div>
+@section Scripts
+{
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
