--- a/MvcCookieAuthSample/Views/Account/Register.cshtml
+++ b/MvcCookieAuthSample/Views/Account/Register.cshtml
@@ -6,20 +6,30 @@
 <div class="row">
     <div class="col-mid-4">
         <form method="post">
-        <h4></h4>
-        <div class="form-group">
-            <label asp-for="Email"></label>
-            <input asp-for="Email" class="form-control"/>
-        </div>
-         <div class="form-group">
-            <label asp-for="Password"></label>
-            <input asp-for="Password" type="password" class="form-control"/>
-        </div>
-         <div class="form-group">
-            <label asp-for="ConfirmPassword"></label>
-            <input asp-for="ConfirmPassword" type="password" class="form-control"/>
-        </div>
-        <button type="submit" class="btn btn-default">Register</button>
-       </form> 
-    </div>    
+            <h4></h4>
+            <div class="form-group" method="post" asp-route-returnUrl="@ViewData["returnUrl"]">
+                <h4>Create a new account</h4>
+                <div class="text-danger" asp-validation-summary="All"></div>
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-default">Register</button>
+        </form>
+    </div>
 </div>
+@section Scripts
+{
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
+
