--- a/MvcCookieAuthSample/Views/Shared/_Layout.cshtml
+++ b/MvcCookieAuthSample/Views/Shared/_Layout.cshtml
@@ -44,12 +44,27 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action=""><span>@User.Claims.Where(x => x.Type == ClaimTypes.Name).First().Value</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="logout">退出</a>
-                        </li>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                           
+                                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">
+                                    <span>
+                                        @User.Claims.First(x => x.Type == ClaimTypes.Name).Value
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="logout">退出</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">登录</a>
+                            </li>
+                        }
+
 
                     </ul>
                 </div>
